--- a/HTML/HTML Training Assignment/index.html
+++ b/HTML/HTML Training Assignment/index.html
@@ -12,40 +12,38 @@
 </head>
 
 <body>
-    <main class="login-main min-vh-100 d-flex align-items-center">
-        <div class="container py-4 py-lg-0">
-            <div class="row">
-                <div class="col-lg-6 text-center text-lg-start">
-                    <img src="./image/hero-image.png" alt="hero image" class="hero-image">
-                </div>
-                <section class="col-lg text-center text-lg-start">
-                    <img src="./image/logo.svg" alt="logo" class="w-50">
-                    <div class="subtitle mb-3 mt-1">We are <span class="subtitle-span">experts</span> in business,
-                        marketing,
-                        growth,
-                        & sales.</div>
-                    <div class="login-title mb-3">Login into your account</div>
-
-                    <!-- login form -->
-                    <form class="login-form mx-auto mx-lg-0">
-                        <div class="form-floating mb-4">
-                            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                            <label for="floatingInput" class="login-label">Username</label>
-                        </div>
-                        <div class="form-floating mb-4">
-                            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
-                            <label for="floatingPassword" class="login-label">Password</label>
-                        </div>
-                        <div class="d-flex justify-content-between align-items-center mb-3">
-                            <button class="login-btn" type="submit">Login</button>
-                            <a href="#" class="forgot-password">Forgot password?</a>
-                        </div>
-                    </form>
-
-                    <div class="registration">Are you a new Member? <a href="#" class="registration-link">Register
-                            here</a></div>
-                </section>
+    <main class="login-main min-vh-100 d-flex align-items-center container py-4 py-lg-0">
+        <div class="row">
+            <div class="col-lg-6 text-center text-lg-start">
+                <img src="./image/hero-image.png" alt="hero image" class="hero-image">
             </div>
+            <section class="col-lg text-center text-lg-start">
+                <img src="./image/logo.svg" alt="logo" class="w-50">
+                <div class="subtitle mb-3 mt-1">We are <span class="subtitle-span">experts</span> in business,
+                    marketing,
+                    growth,
+                    & sales.</div>
+                <div class="login-title mb-3">Login into your account</div>
+
+                <!-- login form -->
+                <form class="login-form mx-auto mx-lg-0 px-3 px-md-0">
+                    <div class="form-floating mb-4">
+                        <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
+                        <label for="floatingInput" class="login-label">Username</label>
+                    </div>
+                    <div class="form-floating mb-4">
+                        <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                        <label for="floatingPassword" class="login-label">Password</label>
+                    </div>
+                    <div class="d-flex justify-content-between align-items-center mb-4">
+                        <button class="login-btn" type="submit">Login</button>
+                        <a href="#" class="forgot-password">Forgot password?</a>
+                    </div>
+                </form>
+
+                <div class="registration">Are you a new Member? <a href="#" class="registration-link">Register
+                        here</a></div>
+            </section>
         </div>
     </main>
 
