some changes in css

--- a/HTML/PSD to HTML/registration.html
+++ b/HTML/PSD to HTML/registration.html
@@ -13,15 +13,15 @@
 
 <body>
     <main class="d-flex flex-column flex-lg-row">
-        <section class="left-background-image text-white d-flex flex-column justify-content-end">
-            <div class="left-background-title">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</div>
-            <div class="left-background-description d-none d-md-block mt-4 font-light">Lorem ipsum dolor sit amet
+        <section class="hero-image text-white d-flex flex-column justify-content-end">
+            <div class="hero-title">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</div>
+            <div class="hero-description d-none d-md-block mt-4 font-light">Lorem ipsum dolor sit amet
                 consectetur adipisicing elit. Iusto officia tempora suscipit incidunt in veniam ab laudantium quos
                 distinctio labore, reprehenderit reiciendis. Doloribus quia fugit enim asperiores velit soluta ducimus
                 ipsum aspernatur laboriosam sed reprehenderit placeat possimus animi adipisci nemo minus, voluptas
                 voluptatum maiores ullam molestias illo voluptatibus commodi saepe!</div>
         </section>
-        <section class="right-section d-flex flex-column gap-3 justify-content-center align-items-center p-5 p-lg-0">
+        <section class="right-section d-flex flex-column gap-2 justify-content-center align-items-center p-5 p-lg-0 mb-lg-4">
             <form class="d-grid gap-3">
                 <div>
                     <label for="first-name" class="font-light">First Name</label>
