--- a/HTML/PSD to HTML/reset-password.html
+++ b/HTML/PSD to HTML/reset-password.html
@@ -13,9 +13,9 @@
 
 <body>
     <main class="d-flex flex-column flex-lg-row">
-        <section class="left-background-image text-white d-flex flex-column justify-content-end">
-            <div class="left-background-title">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</div>
-            <div class="left-background-description d-none d-md-block mt-4 font-light">Lorem ipsum dolor sit amet
+        <section class="hero-image text-white d-flex flex-column justify-content-end">
+            <div class="hero-title">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</div>
+            <div class="hero-description d-none d-md-block mt-4 font-light">Lorem ipsum dolor sit amet
                 consectetur adipisicing elit. Iusto officia tempora suscipit incidunt in veniam ab laudantium quos
                 distinctio labore, reprehenderit reiciendis. Doloribus quia fugit enim asperiores velit soluta ducimus
                 ipsum aspernatur laboriosam sed reprehenderit placeat possimus animi adipisci nemo minus, voluptas
