--- a/HTML/PSD to HTML/login.html
+++ b/HTML/PSD to HTML/login.html
@@ -13,19 +13,58 @@
 
 <body>
     <main class="d-flex flex-column flex-lg-row">
-        <section class="hero-image text-white d-flex flex-column justify-content-end">
-            <div class="hero-title">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</div>
-            <div class="hero-description d-none d-md-block mt-4 font-light">Lorem ipsum dolor sit amet
-                consectetur adipisicing elit. Iusto officia tempora suscipit incidunt in veniam ab laudantium quos
-                distinctio labore, reprehenderit reiciendis. Doloribus quia fugit enim asperiores velit soluta ducimus
-                ipsum aspernatur laboriosam sed reprehenderit placeat possimus animi adipisci nemo minus, voluptas
-                voluptatum maiores ullam molestias illo voluptatibus commodi saepe!</div>
-        </section>
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner h-100">
+                <div class="carousel-item active">
+                    <div class="carousel-overlay"></div>
+                    <img src="./image/Grow-Trees-On-the-path-to-environment-sustainability-login.png" alt="..." class="w-100 h-100">
+                    <div class="carousel-caption">
+                        <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
+                        <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas rerum architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis doloremque cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor libero, magnam itaque laboriosam?</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-overlay"></div>
+                    <img src="./image/Animal-welfare-&-save-birds-campaign.png" alt="..." class="w-100 h-100">
+                    <div class="carousel-caption">
+                        <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
+                        <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas rerum architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis doloremque cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor libero, magnam itaque laboriosam?</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="carousel-overlay"></div>
+                    <img src="./image/Grow-Trees-On-the-path-to-environment-sustainability-login.png" alt="..." class="w-100 h-100">
+                    <div class="carousel-caption">
+                        <h5 class="d-none d-md-block">Lorem ipsum dolor sit amet consectetur elit. Est, ut!</h5>
+                        <p class="d-none d-lg-block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi obcaecati fugiat tempore omnis hic quam impedit sequi molestiae ut cum id fugit ducimus quas rerum architecto eos autem eum soluta, temporibus numquam aspernatur reiciendis officiis doloremque cumque. Quisquam dolores architecto atque inventore provident! Facilis ullam dolor libero, magnam itaque laboriosam?</p>
+                    </div>
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
         <section class="right-section d-flex flex-column gap-3 justify-content-center align-items-center p-5 p-lg-0">
             <form class="login-form d-grid gap-4">
                 <div>
                     <label for="email" class="font-light">Email Address</label>
-                    <input type="email" class="form-control" id="email" placeholder="Enter your email address" value="evan.donohue@gmail.com">
+                    <input type="email" class="form-control" id="email" placeholder="Enter your email address"
+                        value="evan.donohue@gmail.com">
                 </div>
                 <div>
                     <label for="password" class="font-light">Password</label>
@@ -34,9 +73,12 @@
                 <button type="submit" class="btn submit-btn w-100 rounded-pill bg-white">Login</button>
             </form>
             <a href="./forgot-password.html" class="font-light color-darkgray text-14">Lost your password?</a>
-            <div class="font-light text-14 color-darkgray">Don't have an account? <a href="./registration.html" class="color-blue">Create new account</a></div>
+            <div class="font-light text-14 color-darkgray">Don't have an account? <a href="./registration.html"
+                    class="color-blue">Create new account</a></div>
             <a href="#" class="font-light color-darkgray privacy-policy text-14">Privacy Policy</a>
         </section>
     </main>
+    <script src="./js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
