--- a/HTML/PSD to HTML/reset-password.html
+++ b/HTML/PSD to HTML/reset-password.html
@@ -49,7 +49,7 @@
                             dolor libero, magnam itaque laboriosam?</p>
                     </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item h-100">
                     <div class="carousel-overlay"></div>
                     <img src="./image/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         alt="carousel-image" class="w-100 h-100">
