--- a/HTML/PSD to HTML/index.html
+++ b/HTML/PSD to HTML/index.html
@@ -37,7 +37,9 @@
                         <div class="dropdown">
                             <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
                                 type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="./image/user-img.png" alt="profile" class="rounded-circle profile-picture">
+                                <img src="./image/user-img.png" alt="profile" class="rounded-circle"
+                                width="40px"
+                                height="40px">
                                 <span class="d-none d-md-inline">Evan Donohue</span>
                                 <img src="./image/drop-down.png" alt="drop-down">
                             </button>
