--- a/HTML/PSD to HTML/mission-page.html
+++ b/HTML/PSD to HTML/mission-page.html
@@ -35,7 +35,9 @@
                 <div class="dropdown">
                     <button class="btn dropdown-toggle d-flex align-items-center gap-2 color-darkgray fw-light"
                         type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        <img src="./image/user-img.png" alt="profile" class="rounded-circle profile-picture">
+                        <img src="./image/user-img.png" alt="profile" class="rounded-circle"
+                        width="40px"
+                        height="40px">
                         <span class="d-none d-md-inline">Evan Donohue</span>
                         <img src="./image/drop-down.png" alt="drop-down">
                     </button>
@@ -48,8 +50,8 @@
             </div>
         </div>
     </nav>
-    <section class="container mp-top d-flex flex-column flex-lg-row py-4 gap-4">
-        <div class="my-auto">
+    <section class="container mp-top d-flex flex-column flex-lg-row py-4 gap-4 align-items-center">
+        <div>
             <img src="./image/CSR-initiative-stands-for-Coffee--and-Farmer-Equity-2.png" alt="mission image">
             <div class="position-relative">
                 <div class="d-flex mp-small-images overflow-scroll">
@@ -74,7 +76,7 @@
                 </div>
             </div>
         </div>
-        <div class="color-darkgray my-auto">
+        <div class="color-darkgray">
             <h4 class="fw-light">CSR initiative stands for Coffee and Farmer Equity</h4>
             <p class="fw-light text-14">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos neque,
                 odit voluptas libero facilis officiis!</p>
@@ -110,16 +112,18 @@
             </div>
             <hr class="m-0 bg-secondary">
             <div class="my-3 d-flex flex-column gap-2 flex-md-row">
-                <button
+                <a
+                href="#"
                     class="btn rounded-pill d-flex align-items-center gap-2 border border-dark w-100 justify-content-center fw-light text-15 color-darkgray">
                     <img src="./image/heart1.png" alt="heart">
                     Add to Favourite
-                </button>
-                <button
+            </a>
+                <a
+                href="#"
                     class="btn rounded-pill d-flex align-items-center gap-2 border border-dark w-100 justify-content-center fw-light text-15 color-darkgray">
-                    <img src="./image/organization.png" alt="user">
+                    <img src="./image/add1.png" alt="user">
                     Recommand to Co-Worker
-                </button>
+        </a>
             </div>
             <hr class="m-0 bg-secondary mt-4">
             <div class="d-flex align-items-center translate-middle-y bg-white width-max-conatent mx-auto">
@@ -188,7 +192,7 @@
                 </div>
             </div>
             <a href="#" class="btn button d-flex gap-2 align-items-center mx-auto mt-3 width-max-conatent">
-                Apply
+                Apply Now
                 <img src="./image/right-arrow.png" alt="rigth arrow">
             </a>
         </div>
